gui: add bitmaps dictionary + matrix hover
